configure pdf source and target paths as well as destinations for extracted files